--- a/signup.css
+++ b/signup.css
@@ -66,3 +66,10 @@ h3{
 #sp{
     color:blue;
 }
+#btn{
+    display:flex;
+    flex-direction: column;
+    width:31%;
+    margin:auto;
+    gap:10px;
+}
